# torchext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  build.py  pip.conf  pyproject.toml
requirements/: build.txt
torchext/: __init__.py  __init__.pyi
torchext/csrc/: ext.cpp  ext.h  registry.cpp
